[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://GameOverSound.gd" type="Script" id=7]
[ext_resource path="res://BackgroundLoop.gd" type="Script" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
mob_scene = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.435294, 0.505882, 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="BackgroundLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
script = ExtResource( 8 )

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
script = ExtResource( 7 )

[connection signal="gameOver" from="." to="BackgroundLoop" method="_on_Main_gameOver"]
[connection signal="newGame" from="." to="BackgroundLoop" method="_on_Main_newGame"]
[connection signal="scoreAdded" from="." to="BackgroundLoop" method="_on_Main_scoreAdded"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="hit" from="Player" to="GameOverSound" method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
